--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio | Dibya Ranjan Panigrahi</title>
+    <title>Deepak Mahalik</title>
     <!-- External CSS -->
     <link rel="stylesheet" href="./style.css" />
     <!-- Google Fonts -->
@@ -21,10 +21,7 @@
     <!-- Navigation bar  -->
     <header class="header" id="header">
       <div class="logo">
-        <img
-          src="./img/Screen Shot 2022-06-30 at 9.43.13 AM.png"
-          alt="logo img"
-        />
+        
       </div>
       <div class="navbar">
         <ul>
@@ -44,7 +41,7 @@
           <div class="hello">
             <h3>Hello, I'm</h3>
           </div>
-          <div class="name">Dibya Ranjan Panigrahi</div>
+          <div class="name">Deepak Mahalik</div>
           <div class="job">
             <p>
               A <span class="profile">Full Stack Web Developer</span> from
